fix(align): aligned center to expirence

--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -17,7 +17,8 @@ section[id=three]{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 15px;
+    padding: 10px;
+    width: 100%;
 }
 
 section[id=secondary]{
@@ -58,7 +59,7 @@ h1[id=name] {
     animation-iteration-count: infinite;
 }
 @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Lobster&display=swap');
-h2 {
+h2[id=dev] {
     font-family: 'Creepster', cursive;
     font-size: 95px;
     position: relative;
@@ -66,6 +67,13 @@ h2 {
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: reverse;
+}
+
+h2[id=skills] {
+    font-family: 'Creepster', cursive;
+    font-size: 95px;
+    position: relative;
+    color:salmon;
 }
 
 @keyframes move {
@@ -92,9 +100,13 @@ h2 {
           font-size: 60px;
           margin-left: 15%;
       }
-      h2 {
+      h2[id=dev] {
         font-size: 60px;
         margin-left: 15%;
+      }
+
+      h2[id=skills] {
+        font-size: 60px;
       }
 
       section[id=secondary] {
